y.output
Terminals unused in grammar

   TOKEN_ERROR


State 67 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: code

    2 code: var code
    3     | func code
    4     | %empty

    5 var: var_type TK_IDENTIFIER '=' lit ';'
    6    | var_type '#' TK_IDENTIFIER '=' lit ';'
    7    | var_type TK_IDENTIFIER vec_dec ';'

    8 var_type: TK_CHAR
    9         | TK_FLOAT
   10         | TK_INT

   11 vec_dec: '[' LIT_INTEGER ']'
   12        | '[' LIT_INTEGER ']' ':' lit_list
   13        | %empty

   14 lit: LIT_INTEGER
   15    | LIT_REAL
   16    | LIT_CHAR

   17 lit_list: lit lit_list
   18         | %empty

   19 func: var_type TK_IDENTIFIER '(' param_list ')' block

   20 param: var_type TK_IDENTIFIER

   21 param_list: param aux_param_list
   22           | %empty

   23 aux_param_list: ',' param aux_param_list
   24               | %empty

   25 block: '{' command_list '}'

   26 command_list: command ';' command_list
   27             | command

   28 command: attribution
   29        | read
   30        | print
   31        | return
   32        | block
   33        | control
   34        | %empty

   35 attribution: TK_IDENTIFIER '=' expr
   36            | TK_IDENTIFIER '[' expr ']' '=' expr

   37 read: TK_READ TK_IDENTIFIER

   38 print: TK_PRINT print_list

   39 print_list: LIT_STRING
   40           | expr
   41           | LIT_STRING print_list
   42           | expr print_list

   43 return: TK_RETURN expr

   44 expr: TK_IDENTIFIER
   45     | TK_IDENTIFIER '[' expr ']'
   46     | lit
   47     | func_call
   48     | '#' TK_IDENTIFIER
   49     | '&' TK_IDENTIFIER
   50     | '(' expr ')'
   51     | expr '+' expr
   52     | expr '-' expr
   53     | expr '*' expr
   54     | expr '/' expr
   55     | expr '<' expr
   56     | expr '>' expr
   57     | expr '!' expr
   58     | expr OPERATOR_LE expr
   59     | expr OPERATOR_GE expr
   60     | expr OPERATOR_EQ expr
   61     | expr OPERATOR_NE expr
   62     | expr OPERATOR_AND expr
   63     | expr OPERATOR_OR expr

   64 func_call: TK_IDENTIFIER '(' call_param_list ')'
   65          | TK_IDENTIFIER '(' ')'

   66 call_param_list: expr
   67                | expr ',' call_param_list

   68 control: if
   69        | while
   70        | for

   71 if: TK_IF '(' expr ')' TK_THEN command
   72   | TK_IF '(' expr ')' TK_THEN command TK_ELSE command

   73 while: TK_WHILE '(' expr ')' command

   74 for: TK_FOR '(' TK_IDENTIFIER '=' expr TK_TO expr ')' command


Terminals, with rules where they appear

$end (0) 0
'!' (33) 57
'#' (35) 6 48
'&' (38) 49
'(' (40) 19 50 64 65 71 72 73 74
')' (41) 19 50 64 65 71 72 73 74
'*' (42) 53
'+' (43) 51
',' (44) 23 67
'-' (45) 52
'/' (47) 54
':' (58) 12
';' (59) 5 6 7 26
'<' (60) 55
'=' (61) 5 6 35 36 74
'>' (62) 56
'[' (91) 11 12 36 45
']' (93) 11 12 36 45
'{' (123) 25
'}' (125) 25
error (256)
TK_WHILE (258) 73
TK_CHAR (259) 8
TK_INT (260) 10
TK_FLOAT (261) 9
TK_IF (262) 71 72
TK_THEN (263) 71 72
TK_ELSE (264) 72
TK_FOR (265) 74
TK_TO (266) 74
TK_READ (267) 37
TK_RETURN (268) 43
TK_PRINT (269) 38
OPERATOR_LE (270) 58
OPERATOR_GE (271) 59
OPERATOR_EQ (272) 60
OPERATOR_NE (273) 61
OPERATOR_AND (274) 62
OPERATOR_OR (275) 63
TK_IDENTIFIER (276) 5 6 7 19 20 35 36 37 44 45 48 49 64 65 74
LIT_INTEGER (277) 11 12 14
LIT_REAL (278) 15
LIT_CHAR (279) 16
LIT_STRING (280) 39 41
TOKEN_ERROR (281)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
code (48)
    on left: 2 3 4, on right: 1 2 3
var (49)
    on left: 5 6 7, on right: 2
var_type (50)
    on left: 8 9 10, on right: 5 6 7 19 20
vec_dec (51)
    on left: 11 12 13, on right: 7
lit (52)
    on left: 14 15 16, on right: 5 6 17 46
lit_list (53)
    on left: 17 18, on right: 12 17
func (54)
    on left: 19, on right: 3
param (55)
    on left: 20, on right: 21 23
param_list (56)
    on left: 21 22, on right: 19
aux_param_list (57)
    on left: 23 24, on right: 21 23
block (58)
    on left: 25, on right: 19 32
command_list (59)
    on left: 26 27, on right: 25 26
command (60)
    on left: 28 29 30 31 32 33 34, on right: 26 27 71 72 73 74
attribution (61)
    on left: 35 36, on right: 28
read (62)
    on left: 37, on right: 29
print (63)
    on left: 38, on right: 30
print_list (64)
    on left: 39 40 41 42, on right: 38 41 42
return (65)
    on left: 43, on right: 31
expr (66)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63, on right: 35 36 40 42 43 45 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 66 67 71 72 73 74
func_call (67)
    on left: 64 65, on right: 47
call_param_list (68)
    on left: 66 67, on right: 64 67
control (69)
    on left: 68 69 70, on right: 33
if (70)
    on left: 71 72, on right: 68
while (71)
    on left: 73, on right: 69
for (72)
    on left: 74, on right: 70


State 0

    0 $accept: . program $end

    TK_CHAR   shift, and go to state 1
    TK_INT    shift, and go to state 2
    TK_FLOAT  shift, and go to state 3

    $default  reduce using rule 4 (code)

    program   go to state 4
    code      go to state 5
    var       go to state 6
    var_type  go to state 7
    func      go to state 8


State 1

    8 var_type: TK_CHAR .

    $default  reduce using rule 8 (var_type)


State 2

   10 var_type: TK_INT .

    $default  reduce using rule 10 (var_type)


State 3

    9 var_type: TK_FLOAT .

    $default  reduce using rule 9 (var_type)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 9


State 5

    1 program: code .

    $default  reduce using rule 1 (program)


State 6

    2 code: var . code

    TK_CHAR   shift, and go to state 1
    TK_INT    shift, and go to state 2
    TK_FLOAT  shift, and go to state 3

    $default  reduce using rule 4 (code)

    code      go to state 10
    var       go to state 6
    var_type  go to state 7
    func      go to state 8


State 7

    5 var: var_type . TK_IDENTIFIER '=' lit ';'
    6    | var_type . '#' TK_IDENTIFIER '=' lit ';'
    7    | var_type . TK_IDENTIFIER vec_dec ';'
   19 func: var_type . TK_IDENTIFIER '(' param_list ')' block

    TK_IDENTIFIER  shift, and go to state 11
    '#'            shift, and go to state 12


State 8

    3 code: func . code

    TK_CHAR   shift, and go to state 1
    TK_INT    shift, and go to state 2
    TK_FLOAT  shift, and go to state 3

    $default  reduce using rule 4 (code)

    code      go to state 13
    var       go to state 6
    var_type  go to state 7
    func      go to state 8


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 code: var code .

    $default  reduce using rule 2 (code)


State 11

    5 var: var_type TK_IDENTIFIER . '=' lit ';'
    7    | var_type TK_IDENTIFIER . vec_dec ';'
   19 func: var_type TK_IDENTIFIER . '(' param_list ')' block

    '='  shift, and go to state 14
    '['  shift, and go to state 15
    '('  shift, and go to state 16

    $default  reduce using rule 13 (vec_dec)

    vec_dec  go to state 17


State 12

    6 var: var_type '#' . TK_IDENTIFIER '=' lit ';'

    TK_IDENTIFIER  shift, and go to state 18


State 13

    3 code: func code .

    $default  reduce using rule 3 (code)


State 14

    5 var: var_type TK_IDENTIFIER '=' . lit ';'

    LIT_INTEGER  shift, and go to state 19
    LIT_REAL     shift, and go to state 20
    LIT_CHAR     shift, and go to state 21

    lit  go to state 22


State 15

   11 vec_dec: '[' . LIT_INTEGER ']'
   12        | '[' . LIT_INTEGER ']' ':' lit_list

    LIT_INTEGER  shift, and go to state 23


State 16

   19 func: var_type TK_IDENTIFIER '(' . param_list ')' block

    TK_CHAR   shift, and go to state 1
    TK_INT    shift, and go to state 2
    TK_FLOAT  shift, and go to state 3

    $default  reduce using rule 22 (param_list)

    var_type    go to state 24
    param       go to state 25
    param_list  go to state 26


State 17

    7 var: var_type TK_IDENTIFIER vec_dec . ';'

    ';'  shift, and go to state 27


State 18

    6 var: var_type '#' TK_IDENTIFIER . '=' lit ';'

    '='  shift, and go to state 28


State 19

   14 lit: LIT_INTEGER .

    $default  reduce using rule 14 (lit)


State 20

   15 lit: LIT_REAL .

    $default  reduce using rule 15 (lit)


State 21

   16 lit: LIT_CHAR .

    $default  reduce using rule 16 (lit)


State 22

    5 var: var_type TK_IDENTIFIER '=' lit . ';'

    ';'  shift, and go to state 29


State 23

   11 vec_dec: '[' LIT_INTEGER . ']'
   12        | '[' LIT_INTEGER . ']' ':' lit_list

    ']'  shift, and go to state 30


State 24

   20 param: var_type . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 31


State 25

   21 param_list: param . aux_param_list

    ','  shift, and go to state 32

    $default  reduce using rule 24 (aux_param_list)

    aux_param_list  go to state 33


State 26

   19 func: var_type TK_IDENTIFIER '(' param_list . ')' block

    ')'  shift, and go to state 34


State 27

    7 var: var_type TK_IDENTIFIER vec_dec ';' .

    $default  reduce using rule 7 (var)


State 28

    6 var: var_type '#' TK_IDENTIFIER '=' . lit ';'

    LIT_INTEGER  shift, and go to state 19
    LIT_REAL     shift, and go to state 20
    LIT_CHAR     shift, and go to state 21

    lit  go to state 35


State 29

    5 var: var_type TK_IDENTIFIER '=' lit ';' .

    $default  reduce using rule 5 (var)


State 30

   11 vec_dec: '[' LIT_INTEGER ']' .
   12        | '[' LIT_INTEGER ']' . ':' lit_list

    ':'  shift, and go to state 36

    $default  reduce using rule 11 (vec_dec)


State 31

   20 param: var_type TK_IDENTIFIER .

    $default  reduce using rule 20 (param)


State 32

   23 aux_param_list: ',' . param aux_param_list

    TK_CHAR   shift, and go to state 1
    TK_INT    shift, and go to state 2
    TK_FLOAT  shift, and go to state 3

    var_type  go to state 24
    param     go to state 37


State 33

   21 param_list: param aux_param_list .

    $default  reduce using rule 21 (param_list)


State 34

   19 func: var_type TK_IDENTIFIER '(' param_list ')' . block

    '{'  shift, and go to state 38

    block  go to state 39


State 35

    6 var: var_type '#' TK_IDENTIFIER '=' lit . ';'

    ';'  shift, and go to state 40


State 36

   12 vec_dec: '[' LIT_INTEGER ']' ':' . lit_list

    LIT_INTEGER  shift, and go to state 19
    LIT_REAL     shift, and go to state 20
    LIT_CHAR     shift, and go to state 21

    $default  reduce using rule 18 (lit_list)

    lit       go to state 41
    lit_list  go to state 42


State 37

   23 aux_param_list: ',' param . aux_param_list

    ','  shift, and go to state 32

    $default  reduce using rule 24 (aux_param_list)

    aux_param_list  go to state 43


State 38

   25 block: '{' . command_list '}'

    TK_WHILE       shift, and go to state 44
    TK_IF          shift, and go to state 45
    TK_FOR         shift, and go to state 46
    TK_READ        shift, and go to state 47
    TK_RETURN      shift, and go to state 48
    TK_PRINT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    '{'            shift, and go to state 38

    $default  reduce using rule 34 (command)

    block         go to state 51
    command_list  go to state 52
    command       go to state 53
    attribution   go to state 54
    read          go to state 55
    print         go to state 56
    return        go to state 57
    control       go to state 58
    if            go to state 59
    while         go to state 60
    for           go to state 61


State 39

   19 func: var_type TK_IDENTIFIER '(' param_list ')' block .

    $default  reduce using rule 19 (func)


State 40

    6 var: var_type '#' TK_IDENTIFIER '=' lit ';' .

    $default  reduce using rule 6 (var)


State 41

   17 lit_list: lit . lit_list

    LIT_INTEGER  shift, and go to state 19
    LIT_REAL     shift, and go to state 20
    LIT_CHAR     shift, and go to state 21

    $default  reduce using rule 18 (lit_list)

    lit       go to state 41
    lit_list  go to state 62


State 42

   12 vec_dec: '[' LIT_INTEGER ']' ':' lit_list .

    $default  reduce using rule 12 (vec_dec)


State 43

   23 aux_param_list: ',' param aux_param_list .

    $default  reduce using rule 23 (aux_param_list)


State 44

   73 while: TK_WHILE . '(' expr ')' command

    '('  shift, and go to state 63


State 45

   71 if: TK_IF . '(' expr ')' TK_THEN command
   72   | TK_IF . '(' expr ')' TK_THEN command TK_ELSE command

    '('  shift, and go to state 64


State 46

   74 for: TK_FOR . '(' TK_IDENTIFIER '=' expr TK_TO expr ')' command

    '('  shift, and go to state 65


State 47

   37 read: TK_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 66


State 48

   43 return: TK_RETURN . expr

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70

    lit        go to state 71
    expr       go to state 72
    func_call  go to state 73


State 49

   38 print: TK_PRINT . print_list

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    LIT_STRING     shift, and go to state 74
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70

    lit         go to state 71
    print_list  go to state 75
    expr        go to state 76
    func_call   go to state 73


State 50

   35 attribution: TK_IDENTIFIER . '=' expr
   36            | TK_IDENTIFIER . '[' expr ']' '=' expr

    '='  shift, and go to state 77
    '['  shift, and go to state 78


State 51

   32 command: block .

    $default  reduce using rule 32 (command)


State 52

   25 block: '{' command_list . '}'

    '}'  shift, and go to state 79


State 53

   26 command_list: command . ';' command_list
   27             | command .

    ';'  shift, and go to state 80

    $default  reduce using rule 27 (command_list)


State 54

   28 command: attribution .

    $default  reduce using rule 28 (command)


State 55

   29 command: read .

    $default  reduce using rule 29 (command)


State 56

   30 command: print .

    $default  reduce using rule 30 (command)


State 57

   31 command: return .

    $default  reduce using rule 31 (command)


State 58

   33 command: control .

    $default  reduce using rule 33 (command)


State 59

   68 control: if .

    $default  reduce using rule 68 (control)


State 60

   69 control: while .

    $default  reduce using rule 69 (control)


State 61

   70 control: for .

    $default  reduce using rule 70 (control)


State 62

   17 lit_list: lit lit_list .

    $default  reduce using rule 17 (lit_list)


State 63

   73 while: TK_WHILE '(' . expr ')' command

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70

    lit        go to state 71
    expr       go to state 81
    func_call  go to state 73


State 64

   71 if: TK_IF '(' . expr ')' TK_THEN command
   72   | TK_IF '(' . expr ')' TK_THEN command TK_ELSE command

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70

    lit        go to state 71
    expr       go to state 82
    func_call  go to state 73


State 65

   74 for: TK_FOR '(' . TK_IDENTIFIER '=' expr TK_TO expr ')' command

    TK_IDENTIFIER  shift, and go to state 83


State 66

   37 read: TK_READ TK_IDENTIFIER .

    $default  reduce using rule 37 (read)


State 67

   44 expr: TK_IDENTIFIER .
   45     | TK_IDENTIFIER . '[' expr ']'
   64 func_call: TK_IDENTIFIER . '(' call_param_list ')'
   65          | TK_IDENTIFIER . '(' ')'

    '['  shift, and go to state 84
    '('  shift, and go to state 85

    '('       [reduce using rule 44 (expr)]
    $default  reduce using rule 44 (expr)


State 68

   48 expr: '#' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 86


State 69

   49 expr: '&' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 87


State 70

   50 expr: '(' . expr ')'

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70

    lit        go to state 71
    expr       go to state 88
    func_call  go to state 73


State 71

   46 expr: lit .

    $default  reduce using rule 46 (expr)


State 72

   43 return: TK_RETURN expr .
   51 expr: expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '<' expr
   56     | expr . '>' expr
   57     | expr . '!' expr
   58     | expr . OPERATOR_LE expr
   59     | expr . OPERATOR_GE expr
   60     | expr . OPERATOR_EQ expr
   61     | expr . OPERATOR_NE expr
   62     | expr . OPERATOR_AND expr
   63     | expr . OPERATOR_OR expr

    OPERATOR_LE   shift, and go to state 89
    OPERATOR_GE   shift, and go to state 90
    OPERATOR_EQ   shift, and go to state 91
    OPERATOR_NE   shift, and go to state 92
    OPERATOR_AND  shift, and go to state 93
    OPERATOR_OR   shift, and go to state 94
    '+'           shift, and go to state 95
    '-'           shift, and go to state 96
    '*'           shift, and go to state 97
    '/'           shift, and go to state 98
    '!'           shift, and go to state 99
    '<'           shift, and go to state 100
    '>'           shift, and go to state 101

    $default  reduce using rule 43 (return)


State 73

   47 expr: func_call .

    $default  reduce using rule 47 (expr)


State 74

   39 print_list: LIT_STRING .
   41           | LIT_STRING . print_list

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    LIT_STRING     shift, and go to state 74
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70

    $default  reduce using rule 39 (print_list)

    lit         go to state 71
    print_list  go to state 102
    expr        go to state 76
    func_call   go to state 73


State 75

   38 print: TK_PRINT print_list .

    $default  reduce using rule 38 (print)


State 76

   40 print_list: expr .
   42           | expr . print_list
   51 expr: expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '<' expr
   56     | expr . '>' expr
   57     | expr . '!' expr
   58     | expr . OPERATOR_LE expr
   59     | expr . OPERATOR_GE expr
   60     | expr . OPERATOR_EQ expr
   61     | expr . OPERATOR_NE expr
   62     | expr . OPERATOR_AND expr
   63     | expr . OPERATOR_OR expr

    OPERATOR_LE    shift, and go to state 89
    OPERATOR_GE    shift, and go to state 90
    OPERATOR_EQ    shift, and go to state 91
    OPERATOR_NE    shift, and go to state 92
    OPERATOR_AND   shift, and go to state 93
    OPERATOR_OR    shift, and go to state 94
    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    LIT_STRING     shift, and go to state 74
    '+'            shift, and go to state 95
    '-'            shift, and go to state 96
    '*'            shift, and go to state 97
    '/'            shift, and go to state 98
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '!'            shift, and go to state 99
    '<'            shift, and go to state 100
    '>'            shift, and go to state 101
    '('            shift, and go to state 70

    $default  reduce using rule 40 (print_list)

    lit         go to state 71
    print_list  go to state 103
    expr        go to state 76
    func_call   go to state 73


State 77

   35 attribution: TK_IDENTIFIER '=' . expr

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70

    lit        go to state 71
    expr       go to state 104
    func_call  go to state 73


State 78

   36 attribution: TK_IDENTIFIER '[' . expr ']' '=' expr

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70

    lit        go to state 71
    expr       go to state 105
    func_call  go to state 73


State 79

   25 block: '{' command_list '}' .

    $default  reduce using rule 25 (block)


State 80

   26 command_list: command ';' . command_list

    TK_WHILE       shift, and go to state 44
    TK_IF          shift, and go to state 45
    TK_FOR         shift, and go to state 46
    TK_READ        shift, and go to state 47
    TK_RETURN      shift, and go to state 48
    TK_PRINT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    '{'            shift, and go to state 38

    $default  reduce using rule 34 (command)

    block         go to state 51
    command_list  go to state 106
    command       go to state 53
    attribution   go to state 54
    read          go to state 55
    print         go to state 56
    return        go to state 57
    control       go to state 58
    if            go to state 59
    while         go to state 60
    for           go to state 61


State 81

   51 expr: expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '<' expr
   56     | expr . '>' expr
   57     | expr . '!' expr
   58     | expr . OPERATOR_LE expr
   59     | expr . OPERATOR_GE expr
   60     | expr . OPERATOR_EQ expr
   61     | expr . OPERATOR_NE expr
   62     | expr . OPERATOR_AND expr
   63     | expr . OPERATOR_OR expr
   73 while: TK_WHILE '(' expr . ')' command

    OPERATOR_LE   shift, and go to state 89
    OPERATOR_GE   shift, and go to state 90
    OPERATOR_EQ   shift, and go to state 91
    OPERATOR_NE   shift, and go to state 92
    OPERATOR_AND  shift, and go to state 93
    OPERATOR_OR   shift, and go to state 94
    '+'           shift, and go to state 95
    '-'           shift, and go to state 96
    '*'           shift, and go to state 97
    '/'           shift, and go to state 98
    '!'           shift, and go to state 99
    '<'           shift, and go to state 100
    '>'           shift, and go to state 101
    ')'           shift, and go to state 107


State 82

   51 expr: expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '<' expr
   56     | expr . '>' expr
   57     | expr . '!' expr
   58     | expr . OPERATOR_LE expr
   59     | expr . OPERATOR_GE expr
   60     | expr . OPERATOR_EQ expr
   61     | expr . OPERATOR_NE expr
   62     | expr . OPERATOR_AND expr
   63     | expr . OPERATOR_OR expr
   71 if: TK_IF '(' expr . ')' TK_THEN command
   72   | TK_IF '(' expr . ')' TK_THEN command TK_ELSE command

    OPERATOR_LE   shift, and go to state 89
    OPERATOR_GE   shift, and go to state 90
    OPERATOR_EQ   shift, and go to state 91
    OPERATOR_NE   shift, and go to state 92
    OPERATOR_AND  shift, and go to state 93
    OPERATOR_OR   shift, and go to state 94
    '+'           shift, and go to state 95
    '-'           shift, and go to state 96
    '*'           shift, and go to state 97
    '/'           shift, and go to state 98
    '!'           shift, and go to state 99
    '<'           shift, and go to state 100
    '>'           shift, and go to state 101
    ')'           shift, and go to state 108


State 83

   74 for: TK_FOR '(' TK_IDENTIFIER . '=' expr TK_TO expr ')' command

    '='  shift, and go to state 109


State 84

   45 expr: TK_IDENTIFIER '[' . expr ']'

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70

    lit        go to state 71
    expr       go to state 110
    func_call  go to state 73


State 85

   64 func_call: TK_IDENTIFIER '(' . call_param_list ')'
   65          | TK_IDENTIFIER '(' . ')'

    TK_IDENTIFIER  shift, and go to state 67
    LIT_INTEGER    shift, and go to state 19
    LIT_REAL       shift, and go to state 20
    LIT_CHAR       shift, and go to state 21
    '#'            shift, and go to state 68
    '&'            shift, and go to state 69
    '('            shift, and go to state 70
    ')'            shift, and go to state 111

    lit              go to state 71
    expr             go to state 112
    func_call        go to state 73
    call_param_list  go to state 113


State 86

   48 expr: '#' TK_IDENTIFIER .

    $default  reduce using rule 48 (expr)


State 87

   49 expr: '&' TK_IDENTIFIER .

    $default  reduce using rule 49 (expr)


State 88

   50 expr: '(' expr . ')'
   51     | expr . '+' expr
   52     | expr . '-' expr
   53     | expr . '*' expr
   54     | expr . '/' expr
   55     | expr . '<' expr
   56     | expr . '>' expr
   57     | expr . '!' expr
   58     | expr . OPERATOR_LE expr
   59     | expr . OPERATOR_GE expr
   60     | expr . OPERATOR_EQ expr
   61     | expr . OPERATOR_NE expr
   62     | expr . OPERATOR_AND expr
   63     | expr . OPERATOR_OR expr

    OPERATOR_LE   shift, and go to state 89
    OPERATOR_GE   shift, and go to state 90
    OPERATOR_EQ   shift, and go to state 91
    OPERATOR_NE   shift, and go to state 92
    OPERATOR_AND  shift, and go to state 93
    OPERATOR_OR   shift, and go to state 94
    '+'           shift, and go to state 95
    '-'           shift, and go to state 96
    '*'           shift, and go to state 97
    '/'           shift, and go to state 98
    '!'           shift, and go to state 99
    '<'           shift, and go to state 100
    '>'           shift, and go to state 101
    ')'           shift, and go to state 114


State 89

   58 expr: expr OPERATOR_LE . expr
